# project_d100

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  setup.cfg
data/cleaned/: hours_cleaned.parquet  hours_partially_cleaned.parquet
data/processed/: test_set.pkl  train_set.pkl
data/raw/: additional_info.md
models/: glm_best_pipeline.pkl  lgbm_best_pipeline.pkl
project_d100/data/: __init__.py  _clean.py  _eda_clean.py  _load.py  _load_clean.py  _load_eda.py  _save.py
project_d100/evaluation/: __init__.py  _eval.py  _evaluation.py
project_d100/modelling/: __init__.py  _glm_pipeline.py  _lgbm_pipeline.py  _load_save.py  _tuning.py
project_d100/preprocessing/: __init__.py  _pipeline.py  _sample_split.py  _standardscaler.py
project_d100/visualisations/: __init__.py  _eda.py  _eval.py  _save.py
scripts/: eda_cleaning.ipynb  evaluation.py  model_training.py  visualisation.py
tests/preprocessing/: test_standardscaler.py
