[metadata]
name = project_d100
description = D100/D400 Joint Project for Michaelmas Term 2024 at the University of Cambridge
long_description = file: README.md
long_description_content_type = text/markdown
author =  3381A


[options]
include_package_data = true
install_requires =
python_requires = >=3.8
packages = find:


[options.packages.find]
include =
    project_d100

[options.entry_points]
console_scripts =
